--- a/src/AppContent/src/global.sass
+++ b/src/AppContent/src/global.sass
@@ -55,7 +55,7 @@
 
 button
    background-color: rgba(0, 0, 0, 0)
-
+   
 @layer utilities
    .shadow-md
       box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.1) 0px 2px 4px -2px
@@ -92,6 +92,18 @@ button
 
    .bg-highlight
       background-color: var(--highlight-color)
+
+   .inter-light
+      font-family: Inter-lighter
+
+   .inter-normal
+      font-family: Inter-normal
+      
+   .inter-bold
+      font-family: Inter-bold
+
+   .inter-bolder
+      font-family: Inter-bolder
 
 *:focus
    outline: none
@@ -132,7 +144,7 @@ html
    font-size: 11px
    line-height: 1.5
 
-   font-family: Inter, sans-serif
+   font-family: Inter-normal, sans-serif
    tab-size: 4
    font-feature-settings: normal
    font-variation-settings: normal
